app-spring/2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-spring
  namespace: saas
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: app-spring
  template:
    metadata:
      name: app-spring
      labels:
        app: app-spring
    spec:
      containers:
        - name: app-spring
          image: app-spring:dev-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          command: [ "/bin/bash", "-c", "/home/app/bin/start.sh" ]
      imagePullSecrets:
        - name: regcred
